spike-iter-3/compile-fail/tests/ui/state_zeroize.stderr
error[E0277]: the trait bound `BadState: zeroize::ZeroizeOnDrop` is not satisfied
  --> tests/ui/state_zeroize.rs:14:26
   |
14 | impl CredentialState for BadState {}
   |                          ^^^^^^^^ unsatisfied trait bound
   |
help: the trait `zeroize::ZeroizeOnDrop` is not implemented for `BadState`
  --> tests/ui/state_zeroize.rs:9:1
   |
 9 | struct BadState {
   | ^^^^^^^^^^^^^^^
   = help: the following other types implement trait `zeroize::ZeroizeOnDrop`:
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
             (A, B, C, D, E, F, G, H)
           and $N others
note: required by a bound in `CredentialState`
  --> $WORKSPACE/credential-proto/src/lib.rs
   |
   | pub trait CredentialState:
   |           --------------- required by a bound in this trait
   |     Serialize + DeserializeOwned + Send + Sync + ZeroizeOnDrop + 'static
   |                                                  ^^^^^^^^^^^^^ required by this bound in `CredentialState`
   = note: `CredentialState` is a "sealed trait", because to implement it you also need to implement `zeroize::ZeroizeOnDrop`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following types implement the trait:
             std::marker::PhantomPinned
             ()
             [Z; N]
             std::option::Option<Z>
             std::marker::PhantomData<Z>
             (A,)
             (A, B)
             (A, B, C)
           and $N others
